Extracted duplicated comparison functions from filter and map into a base class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ target_sources(streams INTERFACE
         "${SRC_DIR}/defines.hpp"
         "${SRC_DIR}/streams.hpp"
         "${SRC_DIR}/iterable.hpp"
+        "${SRC_DIR}/iter_base.hpp"
         "${SRC_DIR}/map.hpp"
         "${SRC_DIR}/filter.hpp")
 
